<package>
  <name>flex_nav_turtlebot2_flexbe_behaviors</name>
  <version>0.0.1</version>
  <description>
     Behaviors related to demonstration of flexible_navigation system Turtlebot2 models
  </description>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/FlexBE/flex_nav_turtlebot2/issues</url>
  <url type="repository">https://github.com/FlexBE/flex_nav_turtlebot2</url>
  <url type="website">https://github.com/FlexBE/flex_nav_turtlebot2</url>

  <run_depend>rclpy</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <flexbe_behaviors />
  </export>

</package>
